# tiara-entheome

./: LICENSE  MANIFEST.in  README.md  README_UPSTREAM.md  pyproject.toml  requirements.txt  setup.py
recipes/tiara-entheome/: meta.yaml
tests/: smoke_test_vs_upstream.sh
tiara_entheome/: __init__.py  main.py
tiara_entheome/src/: classification.py  prediction.py  transformations.py
tiara_entheome/test/: test.py
tiara_entheome/training/: hyperparameter_search_first_stage.py  hyperparameter_search_second_stage.py  train_models.py  train_tfidf.py
