[project]
name = "tiara-entheome"
version = "1"
authors = [
  { name="Michał Karlicki" }, { name="Stanisław Antonowicz", email="stas.antonowicz@gmail.com" }, { name="Ian M Bollinger", email="ian.michael.bollinger@gmail.com" }
]
description = "A tool for classifying metagenomic data, adapated for use with the Entheome Genome Assembly Pipeline (EGAP)"
readme = "README.md"
requires-python = ">=3.7,<3.10"
classifiers = [
    "Programming Language :: Python :: 3.8",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
keywords = ["machine-learning", "computational-biology"]
dependencies = [
    "biopython~=1.78",
    "joblib~=0.17.0",
    "numba>=0.52.0rc3", #TODO: NEEDS UPDATING FOR EGAP
    "numpy~=1.19.4", #TODO: NEEDS UPDATING FOR EGAP
    "skorch~=0.9.0",
    "torch~=1.7.0",
    "tqdm~=4.54.0"
]

[project.scripts]
tiara-entheome = "tiara.entheome.main:main"
tiara-entheome-test = "tiara.entheome.test.test:test"

[project.urls]
"Homepage" = "https://ibe-uw.github.io/tiara/"
"Bug Tracker" = "https://github.com/iPsychonaut/tiara-entheome/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
