[project]
name = "tiara-entheome"
version = "1.0.0"
authors = [
  { name="Ian M Bollinger", email="ian.michael.bollinger@gmail.com" },
]
description = "Modernised fork of Tiara (Karlicki et al. 2022) for the Entheome ecosystem. Drop-in replacement for tiara=1.0.3 with updated numba, numpy, and pytorch pins for the current bioconda toolchain."
readme = "README.md"
requires-python = ">=3.8,<3.13"
license = { text = "MIT" }
classifiers = [
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
keywords = ["machine-learning", "computational-biology"]
dependencies = [
    "torch>=1.10,<3",
    "skorch>=0.11",
    "numpy>=1.21",
    "numba>=0.56",
    "tqdm",
    "biopython",
    "joblib",
]

[project.scripts]
tiara-entheome = "tiara_entheome.main:main"
tiara-entheome-test = "tiara_entheome.test.test:test"

[project.urls]
"Homepage" = "https://github.com/iPsychonaut/tiara-entheome"
"Upstream" = "https://github.com/ibe-uw/tiara"
"Bug Tracker" = "https://github.com/iPsychonaut/tiara-entheome/issues"

[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["tiara_entheome*"]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
tiara_entheome = [
    "models/nnet-models/*",
    "models/tfidf-models/*",
    "models/tfidf-models/*/*",
    "test/test_data/*",
]
